[tool.poetry]
name = "tp1-api"
version = "0.1.0"
description = "tp1 api simplon poei data engineer salsabil"
authors = ["Serge Buasa <sergebuasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
